--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -301,7 +301,7 @@
         {
           "type": "text",
           "id": "text",
-          "default": "Welcome to our store",
+          "default": "Seja bem-vinda a nossa loja",
           "label": "t:sections.announcement-bar.blocks.announcement.settings.text.label"
         },
         {
